# harpiya-rs

./: .gitignore  Cargo.toml  README.md
crates/harpiya-auth/: Cargo.toml  README.md
crates/harpiya-auth/src/: access_key.rs  authentication.rs  authorization_provider.rs  client_credentials.rs  jwt_claims.rs  lib.rs  rauthy_client.rs  rego_engine.rs  security_token.rs  session_id.rs  user_session.rs
crates/harpiya-channel/: Cargo.toml  README.md
crates/harpiya-channel/src/: cloud_event.rs  flume.rs  lib.rs
crates/harpiya-chatbot/: Cargo.toml  README.md
crates/harpiya-chatbot/src/: client.rs  lib.rs  openai.rs
crates/harpiya-connector/: Cargo.toml  README.md
crates/harpiya-connector/src/: data_source.rs  http.rs  lib.rs  mysql.rs  postgres.rs  sqlite.rs
crates/harpiya-connector/src/arrow/: arrow_array.rs  arrow_field.rs  arrow_schema.rs  data_frame.rs  mod.rs  scalar_provider.rs  scalar_value.rs
crates/harpiya-connector/src/helper/: query.rs  sql_query.rs
crates/harpiya-core/: Cargo.toml  README.md
crates/harpiya-core/benches/: box_error.rs  json_raw_value.rs  serde_map.rs
crates/harpiya-core/src/: lib.rs
crates/harpiya-core/src/application/: http_client.rs  mod.rs  secret_key.rs  tracing_subscriber.rs
crates/harpiya-core/src/mock/: sentence.rs
crates/harpiya-core/src/mock/format/: ipv4.rs  ipv6.rs  mod.rs
crates/harpiya-core/src/model/: column.rs  context.rs  hook.rs  mod.rs
crates/harpiya-core/src/state/: mod.rs
crates/harpiya-derive/: Cargo.toml  README.md
crates/harpiya-derive/docs/: decode_row.md  entity.md  model.md  model_accessor.md  model_hooks.md  schema.md
crates/harpiya-derive/src/: decode_row.rs  entity.rs  lib.rs  model.rs  model_accessor.rs  model_hooks.rs  parser.rs  schema.rs
crates/harpiya-extra/: Cargo.toml  README.md
crates/harpiya-extra/src/: lib.rs
crates/harpiya-extra/src/cache/: mod.rs
crates/harpiya-extra/src/format/: pdf_document.rs
crates/harpiya-http/: Cargo.toml  README.md
crates/harpiya-http/src/: lib.rs
crates/harpiya-http/src/helper/: form_data.rs
crates/harpiya-http/src/i18n/: mod.rs
crates/harpiya-http/src/request/: context.rs  mod.rs
crates/harpiya-http/src/response/: mod.rs  rejection.rs  response_code.rs  webhook.rs
crates/harpiya-http/src/timing/: timing_metric.rs
crates/harpiya-http/src/view/: minijinja.rs  tera.rs
crates/harpiya-model/: Cargo.toml  README.md
crates/harpiya-model/src/: lib.rs
crates/harpiya-model/src/application/: mod.rs
crates/harpiya-model/src/collection/: mod.rs
crates/harpiya-model/src/dataset/: mod.rs
crates/harpiya-model/src/group/: mod.rs
crates/harpiya-model/src/log/: mod.rs
crates/harpiya-model/src/message/: mod.rs
crates/harpiya-model/src/order/: mod.rs
crates/harpiya-model/src/policy/: mod.rs
crates/harpiya-model/src/project/: mod.rs
crates/harpiya-model/src/record/: mod.rs
crates/harpiya-model/src/resource/: mod.rs
crates/harpiya-model/src/source/: mod.rs
crates/harpiya-model/src/tag/: mod.rs
crates/harpiya-model/src/task/: mod.rs
crates/harpiya-model/src/user/: jwt_auth.rs  mod.rs  status.rs  visibility.rs
crates/harpiya-openapi/: Cargo.toml  README.md
crates/harpiya-openapi/src/: lib.rs  model.rs  parser.rs
crates/harpiya-orm/: Cargo.toml  README.md
crates/harpiya-orm/src/: accessor.rs  aggregate.rs  column.rs  decode.rs  entity.rs  executor.rs  helper.rs  join.rs  lib.rs  manager.rs  mutation.rs  mysql.rs  postgres.rs  query.rs  row.rs  scalar.rs  schema.rs  sqlite.rs  transaction.rs  value.rs  window.rs
crates/harpiya-rs/: Cargo.toml  README.md
crates/harpiya-rs/src/: lib.rs
crates/harpiya-rs/src/application/: cluster.rs
crates/harpiya-rs/src/controller/: mod.rs
crates/harpiya-rs/src/middleware/: context.rs  cors.rs  tracing.rs
crates/harpiya-rs/src/prelude/: mod.rs
crates/harpiya-rs/src/request/: mod.rs
crates/harpiya-rs/src/response/: mod.rs
crates/harpiya-storage/: Cargo.toml  README.md
crates/harpiya-storage/src/: lib.rs
crates/harpiya-storage/src/accessor/: mod.rs
crates/harpiya-storage/src/file/: mod.rs
examples/: Cargo.toml  README.md
examples/axum-app/: Cargo.toml
examples/axum-app/config/: config.dev.toml  config.prod.toml
examples/axum-app/config/openapi/: OPENAPI.toml  tenant.toml
examples/axum-app/local/data/mock/: logs.ndjson  users.csv
examples/axum-app/src/: main.rs
examples/axum-app/src/controller/: auth.rs  file.rs  mod.rs  stats.rs  tenant.rs  user.rs
examples/axum-app/src/middleware/: access.rs
examples/axum-app/src/model/: mod.rs  tag.rs  tenant.rs  user.rs
examples/axum-app/src/router/: mod.rs
examples/axum-app/src/schedule/: job.rs  mod.rs
examples/minimal-app/: Cargo.toml
examples/minimal-app/src/: main.rs
