[package]
name = "harpiya-channel"
description = "Cloud events and subscriptions for harpiya."
version = "0.2.0"
rust-version = "1.85"
edition = "2024"

[package.metadata.docs.rs]
features = ["flume"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
flume = [
    "dep:ahash",
    "dep:flume",
    "dep:futures",
    "dep:parking_lot",
]

[dependencies]
serde_json = "1.0.134"

[dependencies.ahash]
version = "0.8.11"
optional = true

[dependencies.flume]
version = "0.11.1"
optional = true

[dependencies.futures]
version = "0.3.31"
optional = true

[dependencies.parking_lot]
version = "0.12.3"
optional = true

[dependencies.serde]
version = "1.0.216"
features = ["derive"]

[dependencies.harpiya-core]
path = "../harpiya-core"
version = "0.30.1"
