[package]
name = "harpiya-chatbot"
description = "Unified access to chatbot services for harpiya."
version = "0.2.0"
rust-version = "1.85"
edition = "2024"

[dependencies]
async-openai = "0.26.0"
futures = "0.3.31"
tracing = "0.1.41"

[dependencies.toml]
version = "0.8.19"
default-features = false

[dependencies.harpiya-core]
path = "../harpiya-core"
version = "0.30.0"
features = ["http-client"]
