[package]
name = "harpiya-derive"
description = "Derived traits for harpiya."
version = "0.28.1"
rust-version = "1.85"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6.0"
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = "2.0.90"

[dependencies.harpiya-core]
path = "../harpiya-core"
version = "0.30.1"

[dependencies.harpiya-orm]
path = "../harpiya-orm"
version = "0.2.1"
