[package]
name = "harpiya-extra"
description = "Extra utilities for harpiya."
version = "0.7.0"
rust-version = "1.85"
edition = "2024"

[package.metadata.docs.rs]
features = ["full"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
all-formats = ["format", "format-pdf"]
cache = ["dep:lru", "dep:parking_lot"]
default = []
format = []
format-pdf = ["format", "dep:printpdf"]
full = ["all-formats", "cache"]

[dependencies.lru]
version = "0.12.5"
optional = true

[dependencies.parking_lot]
version = "0.12.3"
optional = true

[dependencies.printpdf]
version = "0.7.0"
optional = true

[dependencies.harpiya-core]
path = "../harpiya-core"
version = "0.30.0"
