[package]
name = "harpiya-openapi"
description = "OpenAPI support for harpiya."
version = "0.1.0"
rust-version = "1.85"
edition = "2024"

[features]
debug = [
    "utoipa/preserve_order",
    "utoipa/preserve_path_order",
    "harpiya-core/debug",
]

[dependencies]
ahash = "0.8.11"
convert_case = "0.6.0"
serde_json = "1.0.134"
tracing = "0.1.41"

[dependencies.toml]
version = "0.8.19"
default-features = false

[dependencies.utoipa]
version = "5.3.0"
features = [
    "non_strict_integers",
    "url",
    "ulid",
    "uuid",
]

[dependencies.harpiya-core]
path = "../harpiya-core"
version = "0.30.0"
