[package]
name = "harpiya-orm"
description = "ORM for harpiya."
version = "0.2.1"
rust-version = "1.85"
edition = "2024"

[features]
default = ["orm-sqlx"]
openapi = ["harpiya-openapi"]
orm = ["orm-sqlx"]
orm-mariadb = ["orm-sqlx", "sqlx/mysql"]
orm-mysql = ["orm-sqlx", "sqlx/mysql"]
orm-postgres = ["orm-sqlx", "sqlx/postgres"]
orm-sqlite = ["orm-sqlx", "sqlx/sqlite"]
orm-sqlx = ["sqlx", "sqlx/sqlite", "harpiya-core/sqlx"]
orm-tidb = ["orm-sqlx", "sqlx/mysql"]

[dependencies]
apache-avro = "0.17.0"
cfg-if = "1.0"
chrono = "0.4.39"
convert_case = "0.6.0"
http = "1.2.0"
futures = "0.3.31"
regex = "1.11.1"
serde_json = "1.0.134"
smallvec = "1.13.2"
tracing = "0.1.41"
url = "2.5.4"

[dependencies.serde]
version = "1.0.216"
features = ["derive"]

[dependencies.sqlx]
version = "0.8.2"
optional = true
default-features = false
features = [
    "chrono",
    "json",
    "rust_decimal",
    "uuid",
]

[dependencies.toml]
version = "0.8.19"
default-features = false

[dependencies.harpiya-core]
path = "../harpiya-core"
version = "0.30.1"

[dependencies.harpiya-openapi]
path = "../harpiya-openapi"
version = "0.1.0"
optional = true
